gitops/components/app-platform/tpl-app/tpl-backend/rabbitmq/workload.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: tpl-rabbitmq-provision-in, namespace: messaging-platform-dev}
spec:
  podSelector: {matchLabels: {app.kubernetes.io/name: rabbitmq}}
  policyTypes: [Ingress]
  ingress:
    - from:
        - podSelector: {matchLabels: {app.kubernetes.io/name: tpl-rabbitmq-provision}}
      ports: [{protocol: TCP, port: 5672}, {protocol: TCP, port: 15672}]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: {name: tpl-rabbitmq-provision-out, namespace: messaging-platform-dev}
spec:
  podSelector: {matchLabels: {app.kubernetes.io/name: tpl-rabbitmq-provision}}
  policyTypes: [Egress]
  egress:
    - to:
        - podSelector: {matchLabels: {app.kubernetes.io/name: rabbitmq}}
      ports: [{protocol: TCP, port: 5672}, {protocol: TCP, port: 15672}]
